fix(prx_fit): scale item so it works with and without a scrollbar at the same time. (mobile hides scrollbar)

--- a/parallax.css
+++ b/parallax.css
@@ -18,18 +18,19 @@ body,
 .prx_container_x,
 .prx_container_y {
     perspective: 2px;
+    --p-scrollbar-width: 17px;
 }
 /*  account for scrollbar width: 17px
     https://codepen.io/sambible/post/browser-scrollbar-widths    */
 body,
 .prx_container_y {
-    perspective-origin: calc((100% - 17px) * var(--p-align) / 100) 0%;    
+    perspective-origin: calc(100% * var(--p-align) / 100) 0%;    
     overflow-x: hidden;
     overflow-y: auto;
     height: 100vh;
 }
 .prx_container_x {
-    perspective-origin: 0% calc((100% - 17px) * var(--p-align) / 100);
+    perspective-origin: 0% calc(100% * var(--p-align) / 100);
     overflow-x: auto;
     overflow-y: hidden;
     width: 100vw;
@@ -57,6 +58,7 @@ body,
     /*  a: scale-adjust; b: size(vh)
         -(a-b-1) / (ab)    */
     --p-scale-to-fit: max(var(--p-scale-to-fit-above1), var(--p-scale-to-fit-below1));
+    --p-scrollbar-width-scaled: var(--p-scrollbar-width) * var(--p-align) / 100;
 }
 body .prx_fit,
 .prx_container_y .prx_fit {
@@ -64,13 +66,13 @@ body .prx_fit,
     /* center even if oversized (not using translate) */
     --p-center-shift: calc((1% - 1% / var(--p-scale-to-fit)) * var(--p-align));
     left: var(--p-center-shift);           /*make sure it is relative*/
-    width: calc(100% / var(--p-scale-to-fit, 1));
+    width: calc(100% / var(--p-scale-to-fit, 1) + var(--p-scrollbar-width-scaled));
 }
 .prx_container_x .prx_fit {
     width: calc(var(--p-size, unset) * 1vw);
     --p-center-shift: calc((1% - 1% / var(--p-scale-to-fit)) * var(--p-align));
     left: var(--p-center-shift);
-    height: calc(100% / var(--p-scale-to-fit, 1));
+    height: calc(100% / var(--p-scale-to-fit, 1) + var(--p-scrollbar-width-scaled));
 }
 body [prx],
 .prx_container_y [prx] {
